--- a/src/app/shared/header/header.component.html
+++ b/src/app/shared/header/header.component.html
@@ -9,6 +9,9 @@
     <button mat-menu-item (click)="routePage('search')">
       <span>Search Jobs</span>
     </button>
+    <button mat-menu-item (click)="routePage('logout')">
+      <span>Logout</span>
+    </button>
   </mat-menu>HotCake
 </mat-toolbar>
 
