--- a/src/app/layout/footer/footer.component.html
+++ b/src/app/layout/footer/footer.component.html
@@ -1,4 +1,4 @@
-<mat-toolbar color="primary" class="footer">
+<mat-toolbar color="" class="footer">
     <footer>
         <p>&copy; Company 2018 , HotCake.com</p>
       </footer>
