--- a/src/app/layout/masterheader/masterheader.component.html
+++ b/src/app/layout/masterheader/masterheader.component.html
@@ -1,4 +1,4 @@
-<mat-toolbar color="" class="headerFixed">
+<mat-toolbar color="primary" class="headerFixed">
   <button mat-icon-button [matMenuTriggerFor]="menu">
     <mat-icon>menu</mat-icon>
   </button>
