--- a/src/app/layout/footer/footer.component.css
+++ b/src/app/layout/footer/footer.component.css
@@ -5,8 +5,10 @@
   text-align: center;
   margin-left: auto;
   margin-right: auto;
-    bottom: 0px;
-    height: 40px;
-     width: 100%;
+  bottom: 0px;
+  height: 40px;
+  width: 100%;
+  font-family: 'Open Sans', sans-serif;
+  font-size: 15px;
 }
 
