--- a/src/app/applyjob/applyjob.component.html
+++ b/src/app/applyjob/applyjob.component.html
@@ -1,18 +1,20 @@
  <br><br><br>
  <mat-progress-bar [mode]="mode" class="loadingBarFixed"></mat-progress-bar>
  <br>
- <mat-list-item *ngFor="let jobresult of jobresults">
+ <mat-list-item *ngFor="let jobresult of appliedjob">
   <div class="jobliststyle">
      <div style="background-color: #D4D7FE;">
-     <label style="text-transform: uppercase;">{{jobresult.companyname}} </label>
+     <label style="text-transform: uppercase;">{{jobresult.jobinfo["0"].companyname}} </label>
      </div>
      <mat-divider></mat-divider>
-    <span>{{jobresult.role}}</span> &nbsp;&nbsp; <br>
-    <span>Keyskills: {{ jobresult.skillset }}</span><br>
+    <span>{{jobresult.jobinfo["0"].role}}</span> &nbsp;&nbsp; <br>
+    <span>Keyskills: {{ jobresult.jobinfo["0"].skillset }}</span><br>
 
-    <mat-icon class ="materialicons">work_outline </mat-icon>&nbsp;&nbsp; {{ jobresult.minexperience }} - {{ jobresult.maxexperience }} Years <br>
-    <mat-icon class ="materialicons">location_on</mat-icon>&nbsp;&nbsp; {{jobresult.location}}  <br>
-    <mat-icon class ="materialicons">whatshot </mat-icon>&nbsp;&nbsp; <span> Posted {{ datediff(jobresult.createddate) }}  days ago </span>
+    <mat-icon class ="materialicons">work_outline </mat-icon>&nbsp;&nbsp; {{ jobresult.jobinfo["0"].minexperience }} - {{ jobresult.jobinfo["0"].maxexperience }} Years <br>
+    <mat-icon class ="materialicons">location_on</mat-icon>&nbsp;&nbsp; {{jobresult.jobinfo["0"].location}}  <br>
+    <mat-icon class ="materialicons">whatshot </mat-icon>&nbsp;&nbsp; <span> Posted {{ datediff(jobresult.jobinfo["0"].createddate) }}  days ago </span> &nbsp; &nbsp;
+    <mat-icon class ="materialicons">update </mat-icon>&nbsp;&nbsp; <span> Applied On  {{ jobresult.appliedon | date }}  </span> <br>
+    <mat-icon class ="materialicons">thumb_up_alt </mat-icon>&nbsp;&nbsp; <span> Your profile is   {{ jobresult.status }}  </span>
     <span style="float:right;"> <mat-icon (click)="deleteJob(jobresult._id)">delete_outline</mat-icon></span>
 
     </div>
@@ -21,8 +23,3 @@
   <button mat-mini-fab class="filter" color="primary" [disabled]="filterDisplay">
     <mat-icon>filter_list</mat-icon>
   </button>
-  <br><br>
-  <div>
-    <button mat-raised-button color="primary" (click)="viewprofile()">Profile</button>
-    <button mat-raised-button color="primary" (click)="searchjob()">Search Job</button>
-  </div>
