--- a/src/app/applyjob/applyjob.component.html
+++ b/src/app/applyjob/applyjob.component.html
@@ -3,8 +3,8 @@
  <br>
  <mat-list-item *ngFor="let jobresult of appliedjob">
   <div class="jobliststyle">
-     <div style="background-color: #D4D7FE;">
-     <label style="text-transform: uppercase;">{{jobresult.jobinfo["0"].companyname}} </label>
+     <div style="background-color: #9c27b0;">
+     <label style="text-transform: uppercase; color: #ffffff;">{{jobresult.jobinfo["0"].companyname}} </label>
      </div>
      <mat-divider></mat-divider>
     <span>{{jobresult.jobinfo["0"].role}}</span> &nbsp;&nbsp; <br>
