--- a/src/app/searchjob/searchjob.component.html
+++ b/src/app/searchjob/searchjob.component.html
@@ -49,8 +49,8 @@
 
 <mat-list-item *ngFor="let jobresult of jobresults">
   <div class="jobliststyle">
-     <div style="background-color: #D4D7FE;">
-     <label>{{jobresult.companyname}} </label>
+     <div style="background-color: #9c27b0;">
+     <label style="text-transform: uppercase; color: #ffffff;">{{jobresult.companyname}} </label>
      </div>
      <mat-divider></mat-divider>
     <span>{{jobresult.role}}</span> &nbsp;&nbsp; <a ><font size="1">+12 locations</font> </a> <br>
