--- a/src/app/searchjob/searchjob.component.css
+++ b/src/app/searchjob/searchjob.component.css
@@ -28,7 +28,7 @@
 .jobliststyle
 {
     
-    background-color: #dbdbdb;
+    background-color: #ffffff;
     border: 2px solid #ffffff;
     border-radius: 5px;
     border-style: solid;
