--- a/src/app/login/login.component.css
+++ b/src/app/login/login.component.css
@@ -1,9 +1,11 @@
 .buttonblock {
   display: block;
-  width: 50%;
+  width: 40%;
   border: none;
   padding: 14px 28px;
   font-size: 16px;
   cursor: pointer;
   text-align: center;
+  margin:auto;
+  display:block;
 }
