whats app notification

--- a/src/app/searchjob/searchjob.component.html
+++ b/src/app/searchjob/searchjob.component.html
@@ -59,7 +59,7 @@
     <mat-icon color="warn" class ="materialicons">location_on</mat-icon> {{jobresult.location}}  <br>
     <mat-icon color="warn" class ="materialicons">whatshot </mat-icon> <span> Posted {{ datediff(jobresult.createddate) }}  days ago </span>
     <span style="float:right;">
-      <mat-icon  (click)="applyJob(jobresult._id)" color="warn" >favorite_border</mat-icon></span>
+      <mat-icon  (click)="applyJob(jobresult._id)" color="warn" >arrow_forward</mat-icon></span>
 
     </div>
     <mat-divider></mat-divider>
