--- a/src/app/searchjob/searchjob.component.html
+++ b/src/app/searchjob/searchjob.component.html
@@ -40,6 +40,7 @@
 	    </mat-optgroup>
 	  </mat-select><br>
 <br>
+<p><span class="error">{{validationError}}</span></p> 
 	    <div class="keep-c-done-btn">
 	      <mat-chip color="primary" selected="true" mat-button (click)="searchJob()">Search</mat-chip>
 	  	</div>
