profile and job status update

--- a/src/app/applyjob/applyjob.component.html
+++ b/src/app/applyjob/applyjob.component.html
@@ -13,7 +13,7 @@
     <mat-icon color="warn" class ="materialicons">location_on</mat-icon> {{jobresult.jobinfo["0"].location}}  <br>
     <mat-icon color="warn" class ="materialicons">whatshot </mat-icon> <span> Posted {{ datediff(jobresult.jobinfo["0"].createddate) }}  days ago </span> &nbsp; &nbsp;
     <mat-icon color="warn" class ="materialicons">update </mat-icon> <span> Applied On  {{ jobresult.appliedon | date }}  </span> <br>
-    <mat-icon color="accent" class ="materialicons">thumb_up_alt </mat-icon> <span> Your profile is   {{ jobresult.status }}  </span>
+    <mat-icon color="accent" class ="materialicons">thumb_up_alt </mat-icon> <span> Your profile is   {{ jobresult.jobstatus }}  </span>
     <mat-icon color="accent" class ="materialicons">local_offer </mat-icon> <span> Job is valid till {{ jobresult.jobinfo["0"].enddate | date}}  </span>
     <span style="float:right;"> <mat-icon color="warn" (click)="deleteJob(jobresult._id)">delete_outline</mat-icon></span>
 
