--- a/src/app/searchjob/searchjob.component.html
+++ b/src/app/searchjob/searchjob.component.html
@@ -1,5 +1,10 @@
  <br><br><br>
  <mat-progress-bar [mode]="mode" class="loadingBarFixed"></mat-progress-bar>
+ <div *ngIf ="Isprofileset">
+ <alert type="warning" dismissible="true" isOpen ="false">
+   Your profile is not set. Fill in your profile details before job search.
+</alert>
+</div>
 <mat-accordion class="example-headers-align">
   <mat-expansion-panel class="keep-c-expansion-panel" [expanded]="step === 0">
     <mat-expansion-panel-header>
@@ -40,10 +45,7 @@
 	    </mat-optgroup>
 	  </mat-select><br>
 <br>
-<p><span class="error">{{validationError}}</span></p> 
-	    <div class="keep-c-done-btn">
-	      <mat-chip color="primary" selected="true" mat-button (click)="searchJob()">Search</mat-chip>
-	  	</div>
+      <button mat-raised-button color="primary" (click)="searchJob()" [disabled]="Isprofileset">Submit</button>
   </div>
 </mat-expansion-panel>
 </mat-accordion>
