--- a/src/app/profile/profile.component.html
+++ b/src/app/profile/profile.component.html
@@ -51,23 +51,15 @@
    <label class="label" > Experience : {{userprofile.experience}} years </label> <br>
 
     <ion-range-slider #sliderElement
-          min="1"
-          max="30"
-          from="3"
-          hide_min_max="true"
-           hide_from_to= "true"
+           min="1" max="30" from="3" hide_min_max="true" hide_from_to= "true"
           (onChange)="experienceUpdate($event)"></ion-range-slider>
           <br>
 
 	 <label class="label"> Salary Expectation : {{userprofile.salaryexpectationmin}} - {{userprofile.salaryexpectationmax}} lakhs </label> <br>
-	  <ion-range-slider #sliderElement
+    <ion-range-slider #sliderElement
+    min="1" max="50" from="3" to="12" to_min="1" to_max="50"
           type="double"
-          min="1"
-          max="50"
-          from="4"
-          to="7"
-          to_min="1"
-          to_max="50"locationInfo
+        locationInfo
           hide_min_max="true"
            hide_from_to= "true"
           (onChange)="salaryExpectationOnUpdate($event)"></ion-range-slider><br>
@@ -95,7 +87,7 @@
 	<ion-range-slider #sliderElement
           min="1"
           max="30"
-          from="3"
+          from="10"
           hide_min_max="true"
            hide_from_to= "true"
           (onChange)="noticePeriodUpdate($event)"></ion-range-slider>
