--- a/src/app/profile/profile.component.html
+++ b/src/app/profile/profile.component.html
@@ -1,5 +1,6 @@
 <br><br><br>
- <mat-progress-bar class="loadingBarFixed"></mat-progress-bar>
+ <header><h4 style ="color:white;font-weight: bold;font-family:Cambria, Cochin, Georgia, Times, 'Times New Roman', serif">&nbsp;&nbsp;&nbsp; Profile</h4>
+</header>
 <mat-vertical-stepper #stepper>
   <mat-step [stepControl]="firstFormGroup">
     <form [formGroup]="firstFormGroup">
