--- a/HotCake/platforms/android/app/src/main/res/xml/config.xml
+++ b/HotCake/platforms/android/app/src/main/res/xml/config.xml
@@ -17,9 +17,9 @@
     </feature>
     <name>Hot Cake</name>
     <description>
-        A sample Apache Cordova application that responds to the deviceready event.
+        Hot Cake - Your Job Search Portal
     </description>
-    <author email="dev@cordova.apache.org" href="http://cordova.io">
+    <author email="dev@cordova.apache.org" href="http://cordova.io"> hbb
         Apache Cordova Team
     </author>
     <content src="http://ec2-18-222-187-103.us-east-2.compute.amazonaws.com:4200/login" />
