Profile validation status

--- a/src/app/profile/profile.component.html
+++ b/src/app/profile/profile.component.html
@@ -10,12 +10,19 @@
       <input matInput placeholder="Last name, First name" formControlName="fullname" [(ngModel)]="userprofile.fullname"/>
     </mat-form-field>
 	  <br>
-	  <mat-form-field class="input-full-width">
-      <input matInput placeholder="Contact Number" formControlName="contactnumber"class="input-full-width" [(ngModel)]="userprofile.contactnumber"/>
+	<mat-form-field class="input-full-width">
+	<span matPrefix>+91 &nbsp;</span>
+      <input matInput type="tel" placeholder="Contact Number" [formControl]="contactFormControl"class="input-full-width" [(ngModel)]="userprofile.contactnumber"/>
+      <mat-error *ngIf="contactFormControl.hasError('pattern') && !contactFormControl.hasError('required')">
+      Please enter a valid mobile Number
+    </mat-error>
     </mat-form-field>
 	  <br>
 	  <mat-form-field class="input-full-width">
-      <input matInput placeholder="Email Address" formControlName="emailaddress" class="input-full-width" [(ngModel)]="userprofile.emailaddress"/>
+      <input matInput placeholder="Email Address" class="input-full-width" [(ngModel)]="userprofile.emailaddress"  [formControl]="emailFormControl" [errorStateMatcher]="matcher"/>
+      <mat-error *ngIf="emailFormControl.hasError('email') && !emailFormControl.hasError('required')">
+      Please enter a valid email address
+    </mat-error>
     </mat-form-field>
     <br>
    </form>
@@ -99,7 +106,11 @@
 	</mat-form-field>
 	<br>
 	<mat-form-field class="input-full-width">
-    <input matInput placeholder="Reference Number" formControlName="referencenumber" class="input-full-width" [(ngModel)]="userprofile.referencenumber">
+	<span matPrefix>+91 &nbsp;</span>
+    <input matInput type="tel" placeholder="Reference Number" [formControl]="referenceFormControl" class="input-full-width" [(ngModel)]="userprofile.referencenumber">
+	<mat-error *ngIf="referenceFormControl.hasError('pattern') && !referenceFormControl.hasError('required')">
+      Please enter a valid mobile Number
+    </mat-error>
 	</mat-form-field>
 
 	<div>
@@ -107,4 +118,4 @@
 	</div>
 </form>
 </mat-step>
-</mat-vertical-stepper>
+</mat-vertical-stepper><br><br>
